--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,9 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+@import "@liveblocks/react-ui/styles.css";
+@import "@liveblocks/react-lexical/styles.css";
+
 @import "../styles/dark-theme.css";
 @layer base {
   :root {
